make-a-wish-salesforce/src/objects/VisualAntidote__Staging_Submission__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__Batch_Status__c</fullName>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Detail__c</fullName>
        <label>Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Execution_Order__c</fullName>
        <label>Execution Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Staging Submissions</relationshipLabel>
        <relationshipName>Staging_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__IP_Address__c</fullName>
        <label>IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Object_Order__c</fullName>
        <label>Object Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Reference_Field_Name__c</fullName>
        <label>Reference Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Reference_Record_Id__c</fullName>
        <label>Reference Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Repeat_Index__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Repeat Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>VisualAntidote__Submission__c</referenceTo>
        <relationshipLabel>Staging Submissions</relationshipLabel>
        <relationshipName>Staging_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Data_XML__c</fullName>
        <label>Submitted Data XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Unique_Object_Id__c</fullName>
        <label>Unique Object Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Upsert_Fields__c</fullName>
        <label>Upsert Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__User_Content_ID__c</fullName>
        <label>User Content ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Staging Submission</label>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FSS-{00000}</displayFormat>
        <label>Staging Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>